bk_ida/gccida/g2/simple_cst_equal
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simple_cst_equal/src/tree.c:4076:18: error: expected expression
v13 = *( _OWORD *)&imag->block.vars != *( _OWORD *)&elements->block.vars 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simple_cst_equal/src/tree.c:4076:10: error: use of undeclared identifier '_OWORD'
v13 = *( _OWORD *)&imag->block.vars != *( _OWORD *)&elements->block.vars 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simple_cst_equal/src/tree.c:4076:51: error: expected expression
v13 = *( _OWORD *)&imag->block.vars != *( _OWORD *)&elements->block.vars 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simple_cst_equal/src/tree.c:4076:43: error: use of undeclared identifier '_OWORD'
v13 = *( _OWORD *)&imag->block.vars != *( _OWORD *)&elements->block.vars 
                                          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simple_cst_equal/src/obj/tree.o] Error 1
